--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.3.2",
-    "@material-ui/icons": "^4.2.1",
     "bootstrap": "^4.3.1",
     "clarifai": "^2.9.0",
     "react": "^16.8.1",
@@ -12,8 +10,7 @@
     "react-particles-js": "^2.4.2",
     "react-scripts": "2.1.5",
     "react-tilt": "^0.1.4",
-    "reactstrap": "^8.0.1",
-    "tachyons": "^4.11.1"
+    "reactstrap": "^8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
