--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "facerecognitionbrain",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "10.16.0"
+  },
   "dependencies": {
     "bootstrap": "^4.3.1",
     "clarifai": "^2.9.0",
